force-app/main/default/objects/Contact/fields/Achievement_Profile__c.field-meta.xml
<CustomField>
    <fullName>Achievement_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Achievement Profile</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Achievement_Set__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Employee Profile</value>
        </filterItems>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Achievement_Set__c.Contact__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Achievement_Set__c</referenceTo>
    <relationshipLabel>Contacts (Achievement Profile)</relationshipLabel>
    <relationshipName>Contact_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>