force-app/main/default/objects/Contact/fields/AttachedLinks__c.field-meta.xml
<CustomField>
    <fullName>AttachedLinks__c</fullName>
    <label>Attached Links</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>