force-app/main/default/objects/Contact/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <label>Other Availability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>