force-app/main/default/objects/Contact/fields/BSexternalId__c.field-meta.xml
<CustomField>
    <fullName>BSexternalId__c</fullName>
    <externalId>true</externalId>
    <label>Britesheet ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>