force-app/main/default/objects/Contact/fields/Candidate_Source__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Source__c</fullName>
    <label>Candidate Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct linked-in</fullName>
            </value>
            <value>
                <fullName>Advertisement linked-in</fullName>
            </value>
            <value>
                <fullName>Direct Goldenline</fullName>
            </value>
            <value>
                <fullName>Advertisement Goldenline</fullName>
            </value>
            <value>
                <fullName>Advertisement Kariera Britenet</fullName>
            </value>
            <value>
                <fullName>Advertisement praca.pl</fullName>
            </value>
            <value>
                <fullName>Advertisement olx.pl</fullName>
            </value>
            <value>
                <fullName>Advertisement 4programmers</fullName>
            </value>
            <value>
                <fullName>Advertisement pracuj.pl</fullName>
            </value>
            <value>
                <fullName>Advertisement nofluffjobs</fullName>
            </value>
            <value>
                <fullName>Advertisement other</fullName>
            </value>
            <value>
                <fullName>Academy/College</fullName>
            </value>
            <value>
                <fullName>Recommendation external</fullName>
            </value>
            <value>
                <fullName>Recommendation internal</fullName>
            </value>
            <value>
                <fullName>powrót</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>