force-app/main/default/objects/Contact/fields/Career_Path__c.field-meta.xml
<CustomField>
    <fullName>Career_Path__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Career Path</label>
    <referenceTo>Career_Path__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>