force-app/main/default/objects/Contact/fields/ContactAddress__c.field-meta.xml
<CustomField>
    <fullName>ContactAddress__c</fullName>
    <label>Contact Address from ZOHO</label>
    <type>TextArea</type>
</CustomField>