force-app/main/default/objects/Contact/fields/ContactAvailability__c.field-meta.xml
<CustomField>
    <fullName>ContactAvailability__c</fullName>
    <label>Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>From now</fullName>
            </value>
            <value>
                <fullName>2 weeks</fullName>
            </value>
            <value>
                <fullName>1 month</fullName>
            </value>
            <value>
                <fullName>2 months</fullName>
            </value>
            <value>
                <fullName>3 months</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>