force-app/main/default/objects/Contact/fields/Current_Position__c.field-meta.xml
<CustomField>
    <fullName>Current_Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Position</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select Achievement Set that describe position profile and Position form selected Career Path</errorMessage>
        <filterItems>
            <field>Achievement_Set__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Position Profile</value>
        </filterItems>
        <filterItems>
            <field>Achievement_Set__c.Career_Path__c</field>
            <operation>equals</operation>
            <valueField>$Source.Career_Path__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Achievement_Set__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>