force-app/main/default/objects/Contact/fields/Current_salary__c.field-meta.xml
<CustomField>
    <fullName>Current_salary__c</fullName>
    <label>Current salary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>