force-app/main/default/objects/Contact/fields/Data_deletion_GDPR__c.field-meta.xml
<CustomField>
    <fullName>Data_deletion_GDPR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data deletion - GDPR</label>
    <type>Checkbox</type>
</CustomField>