force-app/main/default/objects/Contact/fields/ExpectedContractType__c.field-meta.xml
<CustomField>
    <fullName>ExpectedContractType__c</fullName>
    <label>Expected Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>Umowa o Pracę</fullName>
            </value>
            <value>
                <fullName>Umowa o Pracę z kosztami autorskimi - 90%</fullName>
            </value>
            <value>
                <fullName>Umowa o Pracę z kosztami autorskimi ...</fullName>
            </value>
            <value>
                <fullName>Umowa o Dzieło</fullName>
            </value>
            <value>
                <fullName>Umowa Zlecenie</fullName>
            </value>
            <value>
                <fullName>Inny rodzaj umowy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>