force-app/main/default/objects/Contact/fields/ExpectedSalaryGrossNet__c.field-meta.xml
<CustomField>
    <fullName>ExpectedSalaryGrossNet__c</fullName>
    <label>Expected Salary Gross Net</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Netto</fullName>
            </value>
            <value>
                <fullName>Brutto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>