force-app/main/default/objects/Contact/fields/ExternalCreateRequestFormURL__c.field-meta.xml
<CustomField>
    <fullName>ExternalCreateRequestFormURL__c</fullName>
    <label>External Create Request Form URL</label>
    <type>Url</type>
</CustomField>