force-app/main/default/objects/Contact/fields/ExternalCVUploadFormURL__c.field-meta.xml
<CustomField>
    <fullName>ExternalCVUploadFormURL__c</fullName>
    <label>External CV Upload Form URL</label>
    <type>Url</type>
</CustomField>