force-app/main/default/objects/Contact/fields/Freelancer__c.field-meta.xml
<CustomField>
    <fullName>Freelancer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the contact a freelancer?</description>
    <label>Freelancer</label>
    <type>Checkbox</type>
</CustomField>