force-app/main/default/objects/Contact/fields/Guardian__c.field-meta.xml
<CustomField>
    <fullName>Guardian__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guardian</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Guarded Employees</relationshipLabel>
    <relationshipName>GuardedEmployees</relationshipName>
    <type>Lookup</type>
</CustomField>