force-app/main/default/objects/Contact/fields/ImageUrl__c.field-meta.xml
<CustomField>
    <fullName>ImageUrl__c</fullName>
    <label>ImageUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>