force-app/main/default/objects/Contact/fields/ImportOwnerId__c.field-meta.xml
<CustomField>
    <fullName>ImportOwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Import Owner Id</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Import Owner Id)</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>