force-app/main/default/objects/Contact/fields/Internal_Recommender__c.field-meta.xml
<CustomField>
    <fullName>Internal_Recommender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Recommender</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Internal Recommender)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>