force-app/main/default/objects/Contact/fields/Interviewed_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Interviewed_This_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates wheather the contact had an periodic assessment this year or not</description>
    <label>Interviewed This Year?</label>
    <type>Checkbox</type>
</CustomField>