force-app/main/default/objects/Contact/fields/Is_Contact_Leader__c.field-meta.xml
<CustomField>
    <fullName>Is_Contact_Leader__c</fullName>
    <formula>AND(Leader__c = $User.ContactId, NOT(ISBLANK(Leader__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Contact Leader</label>
    <type>Checkbox</type>
</CustomField>