force-app/main/default/objects/Contact/fields/isDeletedOnBS__c.field-meta.xml
<CustomField>
    <fullName>isDeletedOnBS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deleted On BriteSheet</label>
    <type>Checkbox</type>
</CustomField>