force-app/main/default/objects/Contact/fields/IsLeader__c.field-meta.xml
<CustomField>
    <fullName>IsLeader__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leader</label>
    <type>Checkbox</type>
</CustomField>