force-app/main/default/objects/Contact/fields/joinDateBS__c.field-meta.xml
<CustomField>
    <fullName>joinDateBS__c</fullName>
    <label>BriteSheet join date</label>
    <type>Date</type>
</CustomField>