force-app/main/default/objects/Contact/fields/KartkaENG__c.field-meta.xml
<CustomField>
    <fullName>KartkaENG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kartka ENG</label>
    <type>Checkbox</type>
</CustomField>