force-app/main/default/objects/Contact/fields/Language_level_1__c.field-meta.xml
<CustomField>
    <fullName>Language_level_1__c</fullName>
    <label>Main Language level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>A2</fullName>
            </value>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>