force-app/main/default/objects/Contact/fields/LastDayAtWork__c.field-meta.xml
<CustomField>
    <fullName>LastDayAtWork__c</fullName>
    <label>Last Day at Office</label>
    <type>Date</type>
</CustomField>