force-app/main/default/objects/Contact/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Other Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>