force-app/main/default/objects/Contact/fields/Match_Role__c.field-meta.xml
<CustomField>
    <fullName>Match_Role__c</fullName>
    <label>Match Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Striker/Midfielder</fullName>
            </value>
            <value>
                <fullName>Goalkeeper/Defence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>