force-app/main/default/objects/Contact/fields/Name_frm__c.field-meta.xml
<CustomField>
    <fullName>Name_frm__c</fullName>
    <formula>FirstName + &apos; &apos; + LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>