force-app/main/default/objects/Contact/fields/Number_Of_Achievements__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Achievements__c</fullName>
    <formula>Achievement_Profile__r.Number_Of_Achievements__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Of Achievements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>