force-app/main/default/objects/Contact/fields/On_Black_List__c.field-meta.xml
<CustomField>
    <fullName>On_Black_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Black List</label>
    <type>Checkbox</type>
</CustomField>