force-app/main/default/objects/Contact/fields/Other_links__c.field-meta.xml
<CustomField>
    <fullName>Other_links__c</fullName>
    <label>Other links</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>