force-app/main/default/objects/Contact/fields/Owner_frm__c.field-meta.xml
<CustomField>
    <fullName>Owner_frm__c</fullName>
    <formula>IF(ISBLANK(ImportOwnerId__c), CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName, ImportOwnerId__r.Name_frm__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner</label>
    <type>Text</type>
</CustomField>