force-app/main/default/objects/Contact/fields/PersonalEmail__c.field-meta.xml
<CustomField>
    <fullName>PersonalEmail__c</fullName>
    <label>Personal Email</label>
    <type>Email</type>
</CustomField>