force-app/main/default/objects/Contact/fields/Phones__c.field-meta.xml
<CustomField>
    <fullName>Phones__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(MobilePhone)),NOT(ISBLANK(PersonalPhone__c))), MobilePhone + &apos; ; &apos; + PersonalPhone__c, 
IF(ISBLANK(MobilePhone), PersonalPhone__c, MobilePhone))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phones</label>
    <type>Text</type>
</CustomField>