force-app/main/default/objects/Contact/fields/Recommender__c.field-meta.xml
<CustomField>
    <fullName>Recommender__c</fullName>
    <label>Recommender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>