force-app/main/default/objects/Contact/fields/ResourceRequestor__c.field-meta.xml
<CustomField>
    <fullName>ResourceRequestor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resource Requestor</label>
    <type>Checkbox</type>
</CustomField>