force-app/main/default/objects/Contact/fields/Seniority__c.field-meta.xml
<CustomField>
    <fullName>Seniority__c</fullName>
    <formula>IF(MONTH(TODAY())&gt;MONTH(joinDateBS__c),YEAR(TODAY())-YEAR(joinDateBS__c),IF(AND(MONTH(TODAY())=MONTH(joinDateBS__c),DAY(TODAY())&gt;=DAY(joinDateBS__c)),YEAR(TODAY())-YEAR(joinDateBS__c),(YEAR(TODAY())-YEAR(joinDateBS__c))-1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seniority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>