force-app/main/default/objects/Contact/fields/SkillAssessment__c.field-meta.xml
<CustomField>
    <fullName>SkillAssessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skill Assessment</label>
    <type>Checkbox</type>
</CustomField>