force-app/main/default/objects/Contact/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <description>ZOHO</description>
    <label>Skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>