force-app/main/default/objects/Contact/fields/TargetPosition__c.field-meta.xml
<CustomField>
    <fullName>TargetPosition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Position</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Achievement_Set__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Position Profile</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Achievement_Set__c</referenceTo>
    <relationshipLabel>Contacts (Target Position)</relationshipLabel>
    <relationshipName>TargetPositions</relationshipName>
    <type>Lookup</type>
</CustomField>