force-app/main/default/objects/Contact/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>.NET_C#</fullName>
            </value>
            <value>
                <fullName>.NET_VB</fullName>
            </value>
            <value>
                <fullName>ABAP</fullName>
            </value>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>BI</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>CQ5</fullName>
            </value>
            <value>
                <fullName>ETL</fullName>
            </value>
            <value>
                <fullName>fullstack</fullName>
            </value>
            <value>
                <fullName>Groovie</fullName>
            </value>
            <value>
                <fullName>HTML_CSS</fullName>
            </value>
            <value>
                <fullName>IOS</fullName>
            </value>
            <value>
                <fullName>JAVA</fullName>
            </value>
            <value>
                <fullName>JavaScript</fullName>
            </value>
            <value>
                <fullName>Liferay</fullName>
            </value>
            <value>
                <fullName>MicrosoftDynamics</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>PL/SQL</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>Qt</fullName>
            </value>
            <value>
                <fullName>Ruby</fullName>
            </value>
            <value>
                <fullName>Salesforce.com</fullName>
            </value>
            <value>
                <fullName>Sharepoint</fullName>
            </value>
            <value>
                <fullName>T-SQL</fullName>
            </value>
            <value>
                <fullName>WindowsPhone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>