force-app/main/default/objects/Contact/fields/Trusted_Person__c.field-meta.xml
<CustomField>
    <fullName>Trusted_Person__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trusted Person</label>
    <type>Checkbox</type>
</CustomField>