force-app/main/default/objects/Contact/fields/UserEndDate__c.field-meta.xml
<CustomField>
    <fullName>UserEndDate__c</fullName>
    <description>BS user_end_date</description>
    <label>User Work End Date</label>
    <type>Date</type>
</CustomField>