force-app/main/default/objects/Contact/fields/WiFi_PIN__c.field-meta.xml
<CustomField>
    <fullName>WiFi_PIN__c</fullName>
    <label>WiFi PIN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>