force-app/main/default/objects/Contact/fields/ZOHOId__c.field-meta.xml
<CustomField>
    <fullName>ZOHOId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ZOHO Id</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>