force-app/main/default/objects/Contact/fields/ZOHOUserId__c.field-meta.xml
<CustomField>
    <fullName>ZOHOUserId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ZOHO  User Id</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>