force-app/main/default/objects/Contact/recordTypes/Business.recordType-meta.xml
<RecordType>
    <fullName>Business</fullName>
    <active>true</active>
    <description>Business contact</description>
    <label>Business</label>
</RecordType>