force-app/main/default/objects/Contact/recordTypes/Recruit.recordType-meta.xml
<RecordType>
    <fullName>Recruit</fullName>
    <active>true</active>
    <description>Recruits</description>
    <label>Recruit</label>
</RecordType>