force-app/main/default/objects/Contact/validationRules/InternalContactAssignedToBritenet.validationRule-meta.xml
<ValidationRule>
    <fullName>InternalContactAssignedToBritenet</fullName>
    <active>false</active>
    <description>Ensures all Internal contacts are assigned to Britenet Account</description>
    <errorConditionFormula>RecordType.DeveloperName = &apos;Internal&apos; &amp;&amp; Account.Name != &apos;Britenet Sp. z o.o.&apos;</errorConditionFormula>
    <errorMessage>Internal contacts (employees) can be assigned to Britenet account only.</errorMessage>
</ValidationRule>