force-app/main/default/objects/Contact/validationRules/PIN_is_to_short.validationRule-meta.xml
<ValidationRule>
    <fullName>PIN_is_to_short</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(WiFi_PIN__c)),LEN(WiFi_PIN__c) &lt; 6)</errorConditionFormula>
    <errorDisplayField>WiFi_PIN__c</errorDisplayField>
    <errorMessage>PIN is too short, min 6 characters required</errorMessage>
</ValidationRule>