force-app/main/default/objects/Contact/validationRules/PIN_must_be_numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>PIN_must_be_numeric</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(WiFi_PIN__c)),NOT(ISNUMBER(WiFi_PIN__c)))</errorConditionFormula>
    <errorDisplayField>WiFi_PIN__c</errorDisplayField>
    <errorMessage>PIN must be a number</errorMessage>
</ValidationRule>