force-app/main/default/objects/Contact/validationRules/vEmail.validationRule-meta.xml
<ValidationRule>
    <fullName>vEmail</fullName>
    <active>false</active>
    <description>BRITCRM-307</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Email)), NOT(CONTAINS(Email, &apos;@britenet.com.pl&apos;) ), RecordType.DeveloperName != &apos;Business&apos;, RecordType.DeveloperName != &apos;Recruit&apos;)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Please provide valid Britenet Email</errorMessage>
</ValidationRule>